--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,28 @@
 	overflow: hidden;
 }
 
+html {
+	box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+
+body {
+	min-width: 1200px;
+	margin: 0;
+	padding: 0;
+
+	font-family: "ptsans", Arial, sans-serif, "ptsansbold", Arial, sans-serif;
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 700;
+	color: #000000;
+}
+
 img {
 	max-width: 100%;
 	height: auto;
