--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 .container {
-	margin: 0 45px;
+	margin: 0 75px;
 
 	background-color: #ffffff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -78,7 +78,7 @@ img {
 
 .header {
 	width: 100%;
-	height: 60px;
+	height: 55px;
 }
 
 .main-navigation {
@@ -114,15 +114,16 @@ img {
 
 .navigation-logo::after {
 	position: absolute;
-	left: 50%;
+	left: 500px;
 	top: 0;
-	transform: translate(-50%, 0);
+	transform: translate(-500px, 0);
 
 	width: 140px;
 	height: 72px;
 
 	background-image: url(../img/icon/logo.png);
 
+	z-index: 9;
 	content: "";
 }
 
@@ -133,8 +134,99 @@ img {
 }
 .main {
 }
+
 .main-logo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	position: relative;
+
+	height: 510px;
+
+	background-image: url("../img/main/bg-main.jpg");
+	background-position: 0 -80px;
+	background-repeat: no-repeat;
+	background-size: 100%;
 }
+
+.decorative-arrows {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+
+	width: 100%;
+	height: 60px;
+}
+
+.arrows-wrapper {
+	position: relative;
+
+	width: 100%;
+	height: 100%;
+}
+
+.arrows {
+	position: absolute;
+
+	width: 100%;
+	height: 100%;
+}
+
+.arrow-outer {
+	position: relative;
+
+	height: 100%;
+	width: 100%;
+}
+
+.arrow-inner {
+	position: relative;
+
+	height: 100%;
+	width: 60%;
+}
+
+.arrow-outer::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-left: 0 solid white;
+	border-right: 600px solid transparent;
+	border-bottom: 60px solid white;
+}
+
+.arrow-outer::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	border-right: 0 solid white;
+	border-left: 600px solid transparent;
+	border-bottom: 60px solid white;
+}
+
+.arrow-inner::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0px;
+	border-left: 0 solid white;
+	border-right: 470px solid transparent;
+	border-bottom: 80px solid white;
+}
+
+.arrow-inner::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 500px;
+	border-right: 0 solid white;
+	border-left: 450px solid transparent;
+	border-bottom: 80px solid white;
+}
+
 .main-features {
 }
 .main-features-title {
