--- a/css/style.css
+++ b/css/style.css
@@ -494,36 +494,67 @@ img {
 
 .footer {
 	display: flex;
-	height: 100px;
+	align-items: center;
+	padding: 0 120px;
+	height: 120px;
 }
 
 .footer-contacts {
+	margin-right: 180px;
+
+	font-size: 22px;
+	font-family: "ptsansbold", Arial, sans-serif;
 }
 
 .contacts-text {
+	margin: 0;
+	margin-bottom: 10px;
+
+	color: black;
+	text-decoration: none;
 }
 
 .contacts-tel {
+	margin: 0;
+
+	color: black;
+	text-decoration: none;
 }
 
 .footer-socials {
-}
-
-.footer-socials img {
+	display: flex;
+	justify-content: space-between;
+	margin-right: auto;
+	width: 150px;
 }
 
 .footer-socials a {
-	height: 40px;
-	width: 40px;
-	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 45px;
+	width: 45px;
+
 	background: #81b3d2;
 }
 
+.social-link {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 25px;
+	width: 25px;
+}
+
 .footer-author {
+
 }
 
 .author-text {
+	margin-right: 10px;
 }
 
 .author-name {
+	font-family: "ptsansbold", Arial, sans-serif;
+	color: black;
 }
