--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,8 @@ img {
 
 	font-family: "ptsansbold", Arial, sans-serif;
 
+	transition: all 0.6s;
+	overflow: hidden;
 	background-color: white;
 }
 
@@ -543,6 +545,52 @@ img {
 	color: black;
 }
 
-.hide{
-	display: none;
+.modal-show-animation {
+	animation: showup 0.3s;
+}
+
+.modal-hide-animation {
+	animation: showdown 0.3s;
+}
+
+@keyframes showup {
+	0% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 0.2;
+	}
+	40% {
+		opacity: 0.4;
+	}
+	60% {
+		opacity: 0.6;
+	}
+	80% {
+		opacity: 0.8;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes showdown {
+	0% {
+		opacity: 1;
+	}
+	20% {
+		opacity: 0.8;
+	}
+	40% {
+		opacity: 0.6;
+	}
+	60% {
+		opacity: 0.4;
+	}
+	80% {
+		opacity: 0.2;
+	}
+	100% {
+		opacity: 0;
+	}
 }
