--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,6 @@ img {
 	content: "";
 }
 
-.find-hotel-wrapper,
 .main-logo {
 	position: relative;
 
@@ -145,20 +144,6 @@ img {
 	background-position: 0 -80px;
 	background-repeat: no-repeat;
 	background-size: 100%;
-}
-
-.find-hotel {
-	position: relative;
-
-	overflow: hidden;
-}
-
-.find-hotel-wrapper {
-	margin: -10px;
-	height: 240px;
-
-	background-position: 0 -300px;
-	filter: blur(10px);
 }
 
 .decorative-arrows {
@@ -690,11 +675,130 @@ img {
 	}
 }
 
+.find-hotel {
+	height: 220px;
+	width: 100%;
+
+	background-image: url("../img/main/bg-main.jpg");
+	background-position: 0 -300px;
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
 
 .find-hotel-form {
+	display: flex;
+	height: 100%;
+	width: 100%;
+
+	color: white;
+	font-size: 14px;
+}
+
+.find-hotel-form fieldset {
+	border: none;
+}
+
+.find-hotel-wrapper {
+}
+
+.checkbox-indicator {
 	position: absolute;
 	top: 0;
 	left: 0;
 
-	z-index: 9;
+	height: 25px;
+	width: 25px;
+
+	border: 2px solid #ffffff;
+	border-radius: 4px;
+}
+
+.accommodation,
+.infrastructure {
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	padding: 0;
+	margin-top: 25px;
+	margin-right: 120px;
+}
+
+.accommodation {
+	margin-right: initial;
+	flex-grow: 1;
+}
+
+.accommodation label,
+.infrastructure label {
+	position: relative;
+
+	margin-bottom: 20px;
+	padding-left: 40px;
+
+	cursor: pointer;
+}
+
+.accommodation input,
+.infrastructure input {
+	display: none;
+}
+
+.accommodation input[type="checkbox"]:checked + .checkbox-indicator::before,
+.accommodation input[type="checkbox"]:checked + .checkbox-indicator::after,
+.infrastructure input[type="checkbox"]:checked + .checkbox-indicator::before,
+.infrastructure input[type="checkbox"]:checked + .checkbox-indicator::after {
+	position: absolute;
+	top: 10px;
+	left: 2px;
+
+	width: 12px;
+	height: 4px;
+
+	background-color: #ffffff;
+
+	content: "";
+}
+
+.accommodation input[type="checkbox"]:checked + .checkbox-indicator::after,
+.infrastructure input[type="checkbox"]:checked + .checkbox-indicator::after {
+	top: 6px;
+	left: 6px;
+
+	width: 23px;
+}
+
+.accommodation input[type="checkbox"]:checked + .checkbox-indicator::before,
+.infrastructure input[type="checkbox"]:checked + .checkbox-indicator::before {
+	transform: rotate(45deg);
+}
+
+.accommodation input[type="checkbox"]:checked + .checkbox-indicator::after,
+.infrastructure input[type="checkbox"]:checked + .checkbox-indicator::after {
+	transform: rotate(-50deg);
+}
+
+.accommodation-title,
+.infrastructure-title {
+	margin-bottom: 25px;
+
+	font-size: 16px;
+	font-family: "ptsansbold", Arial, sans-serif;
+}
+
+.price-slider {
+	margin-top: 25px;
+}
+
+.price-title {
+	font-size: 16px;
+	font-family: "ptsansbold", Arial, sans-serif;
+}
+
+.price-input {
+}
+
+.price-slider {
+}
+
+.price-submit {
 }
