--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ img {
 	align-items: center;
 	align-self: center;
 	height: 65%;
-	width: 400px;
+	width: 550px;
 
 	color: white;
 	text-align: center;
@@ -236,15 +236,15 @@ img {
 }
 
 .feature-img {
-	overflow: hidden;
+	display: flex;
+	height: 100%;
+	width: 100%;
 }
 
 .feature-img img {
-	position: relative;
-	top: -75px;
-
 	width: 100%;
 	height: auto;
+	object-fit: cover;
 }
 
 .features-block {
