--- a/css/style.css
+++ b/css/style.css
@@ -1286,7 +1286,7 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 4;
+  z-index: -1;
 
   height: 4px;
 
@@ -1324,11 +1324,19 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-runnable-track,
 input[type="range"]::-webkit-slider-thumb,
 input[type="range"] {
+  z-index: 2;
+
+  width: 100%;
+  height: 4px;
+
+  background-color: #ffffff40;
+
   -webkit-appearance: none;
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
   position: relative;
+  z-index: 3;
 
   width: 100%;
   height: 4px;
@@ -1339,6 +1347,7 @@ input[type="range"]::-webkit-slider-runnable-track {
 
 input[type="range"]::-moz-range-track {
   position: relative;
+  z-index: 4;
 
   width: 100%;
   height: 4px;
@@ -1348,13 +1357,14 @@ input[type="range"]::-moz-range-track {
 
 input[type="range"]::-webkit-slider-thumb {
   position: absolute;
-  top: -9px;
+  top: -8px;
   left: 0;
   z-index: 9;
 
   width: 20px;
   height: 23px;
 
+  background-color: transparent;
   background-image: url("../svg/filter-button.svg");
   border: none;
   border-radius: 0;
@@ -1364,13 +1374,14 @@ input[type="range"]::-webkit-slider-thumb {
 
 input[type="range"]::-moz-range-thumb {
   position: absolute;
-  top: -9px;
+  top: -8px;
   left: 0;
   z-index: 9;
 
   width: 20px;
   height: 23px;
 
+  background-color: transparent;
   background-image: url("../svg/filter-button.svg");
   border: none;
   border-radius: 0;
